--- a/frontend/settings.html
+++ b/frontend/settings.html
@@ -11,7 +11,8 @@
   <meta name="apple-mobile-web-app-title" content="HealthHub">
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="icons/icon-192x192.png">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" as="style" onload="this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"></noscript>
   <script src="dark-mode.js"></script>
   <style>
     :root {
@@ -868,6 +869,16 @@
       if (!toggle) return;
       toggle.classList.toggle('active');
       toggle.setAttribute('aria-checked', toggle.classList.contains('active'));
+      if (toggle.classList.contains('active')) {
+        if ('Notification' in window) {
+          try {
+            Notification.requestPermission().then(function(p){
+              if (p !== 'granted') { showNotification('Notifications blocked by browser', 'error'); }
+              else { showNotification('Notifications enabled', 'success'); }
+            });
+          } catch(e) {}
+        }
+      }
       debounceSave();
     }
 
